2004-12-18  Adam Heath  <doogieg@brainfood.com>

	* configure.ac, configure:
	  The processing of --disable-debug had the CPPFLAGS block only
	  running when --disable-debug is specified.  It never ran in the
	  default case, so -vmdebug was never a valid option.

2004-12-16  Adam Heath  <doogieg@brainfood.com>

	* config/i386/linux/xprofile-md.h, kaffe/kaffe/main.c
	  kaffe/kaffevm/access.c, kaffe/kaffevm/classMethod.c
	  kaffe/kaffevm/classPool.c, kaffe/kaffevm/code-analyse.c
	  kaffe/kaffevm/code.c, kaffe/kaffevm/exception.c
	  kaffe/kaffevm/locks.h, kaffe/kaffevm/jit3/basecode.c
	  kaffe/kaffevm/jit3/icode.c:
	  First set of fixes after using sparse: 0 -> NULL changes.

2004-12-16  Adam Heath  <doogieg@brainfood.com>

	* scripts/sort-warnings.pl, scripts/SparseWarning.pm:
	  Add support for sparse.

2004-12-17  Michael Koch  <konqueror@gmx.de>

	* libraries/javalib/javax/swing/JTable.java
	(addColumn): New method.
	(getColumnClass): Likewise.
	(getColumnName): Likewise.

2004-12-17  Paul Jenner  <psj.home@ntlworld.com>

	* libraries/javalib/javax/swing/TransferHandler.java
	(createTransferable): Made protected.

2004-12-16  Adam Heath  <doogieg@brainfood.com>

	* libraries/clib/native/Runtime.c:
	  Use LL suffix instead of just L for long long constant.

2004-12-16  Michael Koch  <konqueror@gmx.de>

	* libraries/javalib/javax/swing/JTable.java,
	libraries/javalib/javax/swing/plaf/basic/BasicTableHeaderUI.java,
	libraries/javalib/javax/swing/plaf/basic/BasicTableUI.java:
	Use fixed get/setIntercellSpacing() methods.

2004-12-16  Michael Koch  <konqueror@gmx.de>

	* libraries/javalib/javax/swing/JTable.java
	(getIntercellSpacing): Fixed typo in method name.
	(setIntercellSpacing): Likewise.

2004-12-16  Michael Koch  <konqueror@gmx.de>

	* libraries/javalib/javax/swing/text/JTextComponent.java
	(focusAccelerator): New variable.
	(getFocusAccelerator): New method.
	(setFocusAccelerator): Likewise.

2004-12-16  Adam Heath  <doogieg@brainfood.com>
