@@ -205,6 +205,7 @@ extern debugmask_t kaffevmDebugMask;
 #define KFUNC_FORMAT(archtype,fmt,arg)
 #endif
 
+extern int kaffe_dprintf_fd;
 int kaffe_dprintf(const char *fmt, ...) KFUNC_FORMAT(printf,1,2);
 
 /* Set the debugging mask to use. (give the mask) */
